# geoffrey_telegram

./: .gitignore  Dockerfile  README.md  Readme.md  channel_video_downloader.py  compose.yml  docker-compose.yml  geoffrey_bot.py  pyproject.toml
.github/workflows/: docker-publish.yml
vd-yt/: main.py
